--- a/bldg-client/Packages/manifest.json
+++ b/bldg-client/Packages/manifest.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
+    "com.unity.ads": "2.0.8",
+    "com.unity.analytics": "3.2.3",
     "com.unity.cinemachine": "2.8.4",
     "com.unity.collab-proxy": "1.15.13",
     "com.unity.ide.rider": "3.0.12",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.nuget.newtonsoft-json": "3.0.1",
+    "com.unity.postprocessing": "2.3.0",
+    "com.unity.purchasing": "2.0.3",
+    "com.unity.recorder": "4.0.0-pre.3",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
